--- a/index.html
+++ b/index.html
@@ -1,3 +1,7 @@
-<p>This is a GitHub Example</p>
-<h1>hello world!!!</h1>
-<h2>Welcome</h2>
+<div>
+    <p>This is a GitHub Example</p>
+</div>
+<div>
+    <h1>hello world!!!</h1>
+    <h2>Welcome</h2>
+</div>
